# tools-viz

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: BuildMacros.cmake  Externals.cmake  PluginMacros.cmake
cmake/patches/: osg_cpp17_fixes.cmake  osg_std_byte_fix.cmake
core/: CMakeLists.txt
docs/: Doxyfile  build_docs.cmake
plugins/example-plugin/: CMakeLists.txt  example-plugin.json
plugins/example-plugin/qml/: ExamplePlugin.qml
plugins/example-plugin/src/: ExamplePlugin.cpp  ExamplePlugin.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/core/: CMakeLists.txt
src/core/include/core/: IPlugin.h  PluginManager.h  PluginMetadata.h  core_global.h
src/core/src/: PluginManager.cpp  PluginMetadata.cpp
src/plugins/: CMakeLists.txt
src/plugins/osgearth_viewer/: CMakeLists.txt  osgearth_viewer.json
src/plugins/osgearth_viewer/qml/: OsgEarthViewer.qml
src/plugins/osgearth_viewer/src/: EarthWidget.cpp  EarthWidget.h  OsgEarthViewerPlugin.cpp  OsgEarthViewerPlugin.h
superbuild/: Macros.cmake  Versions.cmake
superbuild/patches/: osg-3.6.5-cpp17.cmake  osgearth-3.7.2-gdal-namespace.cmake
